--- a/app/src/main/res/layout/activity_no_connection.xml
+++ b/app/src/main/res/layout/activity_no_connection.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/colorOnBackground">
 
     <ImageView
         android:id="@+id/ivTopBlock"
@@ -21,6 +22,7 @@
         android:text="@string/sad_connection_smile"
         android:textSize="150sp"
         android:fontFamily="@font/fredoka_regular"
+        android:textColor="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivTopBlock" />
@@ -30,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
+        android:gravity="center_horizontal"
         android:text="@string/no_connection"
         android:textSize="30sp"
         android:fontFamily="@font/fredoka_regular"
@@ -50,6 +53,7 @@
         android:text="@string/check_connection"
         android:textSize="20sp"
         android:fontFamily="@font/fredoka_medium_regular"
-        android:backgroundTint="#5B7BFE"/>
+        android:background="@drawable/rounded_select_button_background"
+        app:backgroundTint="#5B7BFE"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
