--- a/app/src/main/res/layout/item_language_button.xml
+++ b/app/src/main/res/layout/item_language_button.xml
@@ -2,20 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="wrap_content"
+    android:paddingBottom="12dp">
 
-    <TextView
-        android:fontFamily="@font/fredoka_medium_regular"
-        android:textSize="48sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        style="@style/h5MediumLanguageButton"
+        android:background="@drawable/rounded_language_background"
+        app:backgroundTint="@null"
+        android:id="@+id/btnLanguage"
+        android:layout_width="327dp"
+        android:layout_height="67dp"
+        tools:text="language"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
