--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,18 +12,24 @@
     <style name="h5Medium">
         <item name="android:textSize">22sp</item>
         <item name="fontFamily">@font/fredoka_semibold</item>
-        <item name="android:textColor">#080E1E</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
     </style>
 
-    <style name="h6Medium">
+    <style name="h5MediumLanguageButton">
+        <item name="android:textSize">22sp</item>
+        <item name="fontFamily">@font/fredoka_semibold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="h6MediumButton">
         <item name="android:textSize">20sp</item>
         <item name="fontFamily">@font/fredoka_semibold</item>
-        <item name="android:textColor">#080E1E</item>
+        <item name="android:textColor">@color/light_text</item>
     </style>
 
     <style name="bodyMedium">
         <item name="android:textSize">15sp</item>
         <item name="fontFamily">@font/fredoka_medium_regular</item>
-        <item name="android:textColor">#080E1E60</item>
+        <item name="android:textColor">?attr/colorSecondary</item>
     </style>
 </resources>
