--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MobileApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorOnBackground">@color/light_background</item>
+        <item name="colorPrimary">@color/dark_text</item>
+        <item name="colorSecondary">@color/opacity_dark_text</item>
     </style>
 
     <style name="Theme.MobileApp" parent="Base.Theme.MobileApp" />
