add login activity, do project structure refactoring

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.MobileApp" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorOnBackground">@color/dark_background</item>
         <item name="colorPrimary">@color/light_text</item>
-        <item name="colorSecondary">@color/opacity_white_text</item>
+        <item name="colorSecondary">@color/opacity_white_60</item>
+        <item name="colorSmallTitle">@color/opacity_white_60</item>
+        <item name="colorActivity">@color/opacity_white_60</item>
     </style>
 </resources>
