--- a/app/src/main/res/layout/activity_language_select.xml
+++ b/app/src/main/res/layout/activity_language_select.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorOnBackground"
-    tools:context=".LanguageSelectActivity">
+    tools:context=".language_select.LanguageSelectActivity">
 
   <ImageView
       android:id="@+id/ivTopBlock"
@@ -19,7 +19,7 @@
       app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
-      android:id="@+id/textView"
+      android:id="@+id/tvLoginHeader"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="20dp"
