--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,23 @@
         <item name="fontFamily">@font/fredoka_medium_regular</item>
         <item name="android:textColor">?attr/colorSecondary</item>
     </style>
+
+    <style name="textInput">
+        <item name="android:textSize">15sp</item>
+        <item name="fontFamily">@font/fredoka_medium_regular</item>
+        <item name="android:textColor">@color/dark_text</item>
+        <item name="android:textColorHint">@color/opacity_gray_dark_50</item>
+    </style>
+
+    <style name="textActivity">
+        <item name="android:textSize">17sp</item>
+        <item name="fontFamily">@font/fredoka_medium_regular</item>
+        <item name="android:textColor">?attr/colorActivity</item>
+    </style>
+
+    <style name="bodyMediumSmallTitles">
+        <item name="android:textSize">15sp</item>
+        <item name="fontFamily">@font/fredoka_medium_regular</item>
+        <item name="android:textColor">?attr/colorSmallTitle</item>
+    </style>
 </resources>
