--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="opacity_gray_dark_50">#80656872</color>
     <color name="gray_dark">#656872</color>
     <color name="blue">#5B7BFE</color>
+    <color name="deep_blue">#410FA3</color>
 </resources>
