--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,10 +21,14 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="h6MediumButton">
+    <style name="selectBlueButton">
         <item name="android:textSize">20sp</item>
         <item name="fontFamily">@font/fredoka_semibold</item>
-        <item name="android:textColor">@color/light_text</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">327dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/rounded_select_button_background</item>
+        <item name="backgroundTint">@color/blue</item>
     </style>
 
     <style name="bodyMedium">
