--- a/app/src/main/res/layout/fragment_signup2.xml
+++ b/app/src/main/res/layout/fragment_signup2.xml
@@ -100,7 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/signup_confirm_hint"
-                android:inputType="textPersonName" />
+                android:inputType="textPassword" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
