--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="gray_dark">#656872</color>
     <color name="blue">#5B7BFE</color>
     <color name="deep_blue">#410FA3</color>
+    <color name="gray_text">#B6B6B6</color>
+    <color name="user_item_background">#E5E5E5</color>
 </resources>
