--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,17 @@
     tools:context=".login.LoginActivity">
 
     <ImageView
+        android:id="@+id/ivBack"
+        android:elevation="2dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/back_icon"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivTopBlock"
+        app:layout_constraintStart_toStartOf="@+id/ivTopBlock" />
+
+    <ImageView
         android:id="@+id/ivTopBlock"
         android:layout_width="match_parent"
         android:layout_height="92dp"
