--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,12 @@
         <item name="android:textColor">?attr/colorPrimary</item>
     </style>
 
+    <style name="h6Medium">
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/fredoka_semibold</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+    </style>
+
     <style name="h5MediumLanguageButton">
         <item name="android:textSize">22sp</item>
         <item name="fontFamily">@font/fredoka_semibold</item>
@@ -40,8 +46,8 @@
     <style name="textInput">
         <item name="android:textSize">15sp</item>
         <item name="fontFamily">@font/fredoka_medium_regular</item>
-        <item name="android:textColor">@color/dark_text</item>
-        <item name="android:textColorHint">@color/opacity_gray_dark_50</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textColorHint">?attr/colorSecondary</item>
     </style>
 
     <style name="textActivity">
