--- a/app/src/main/res/layout/item_user_rating.xml
+++ b/app/src/main/res/layout/item_user_rating.xml
@@ -37,6 +37,7 @@
         app:layout_constraintTop_toTopOf="@+id/ivBackground" />
 
     <TextView
+        android:id="@+id/tvPoints"
         tools:text = "12 points"
         style="@style/textActivity"
         android:textColor="@color/black"
