--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -61,4 +61,28 @@
         <item name="fontFamily">@font/fredoka_medium_regular</item>
         <item name="android:textColor">?attr/colorSmallTitle</item>
     </style>
+
+    <style name="exerciseIconText">
+        <item name="android:textSize">90sp</item>
+        <item name="fontFamily">@font/fredoka_regular</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="layout_constraintTop_toTopOf">parent</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="layout_constraintEnd_toEndOf">parent</item>
+        <item name="android:layout_marginBottom">64dp</item>
+    </style>
+
+    <style name="exerciseName">
+        <item name="android:textSize">13sp</item>
+        <item name="fontFamily">@font/fredoka_regular</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="layout_constraintBottom_toBottomOf">parent</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="layout_constraintEnd_toEndOf">parent</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
 </resources>
