--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
     </style>
 
     <style name="Theme.MobileApp" parent="Base.Theme.MobileApp" />
+    <style name="MobileAppSplashTheme">
+        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@color/deep_blue</item>
+        <item name="postSplashScreenTheme">@style/Theme.MobileApp</item>
+    </style>
 </resources>
