add reload user data in activities, add base version of change photo activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="audition_background">#F76400</color>
     <color name="green">#5BA890</color>
     <color name="red">#D6185D</color>
+    <color name="resize_background">#1B1815</color>
 </resources>
