complete word exercise

--- a/app/src/main/res/layout/activity_word_exercise.xml
+++ b/app/src/main/res/layout/activity_word_exercise.xml
@@ -75,7 +75,7 @@
         android:id="@+id/btnAction"
         style="@style/selectBlueButton"
         android:layout_marginBottom="27dp"
-        tools:text = "Check"
+        android:text="@string/word_exercise_check"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
